syntax="proto3";

package order;

option go_package="./order";

service Order{
  rpc Create(CreateOrderRequest) returns(CreateResponse); // 创建订单接口
  rpc Update(UpdateRequest) returns(UpdateResponse); // 更新订单
  rpc Remove(RemoveRequest) returns(RemoveResponse); // 删除订单
  rpc Detail(DetailRequest)returns(DetailResponse); // 订单详情
  rpc List(ListRequest) returns(ListResponse); // 订单列表
  rpc Paid(PaidRequest) returns(PaidResponse); // 支付
}

//订单创建
message CreateOrderRequest{
  int64 uid = 1; // 用户id
  int64 pid = 2; // 商品id
  fixed64 amount = 3; // 商品价格
  int64 status = 4; // 订单状态
}
message CreateResponse {
  int64 id = 1;  // 订单ID
}

// 订单修改
message UpdateRequest {
  int64 id = 1;
  int64 Uid = 2;
  int64 Pid = 3;
  int64 Amount = 4;
  int64 Status = 5;
}
message UpdateResponse {
}


// 订单删除
message RemoveRequest {
  int64 id = 1;
}
message RemoveResponse {
}

// 订单详情
message DetailRequest{
  int64 id = 1; // 订单ID
}

message DetailResponse{
  int64 id = 1;
  int64 Uid = 2;
  int64 Pid = 3;
  int64 Amount = 4;
  int64 Status = 5;
}



// 订单列表
message ListRequest{
  int64 uid = 1; // 用户ID
}

message ListResponse{
  repeated DetailResponse data = 1;
}



// 订单支付
message PaidRequest {
  int64 id = 1;
}
message PaidResponse {
}